<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.mjsip</groupId>
	<artifactId>mjsip-parent</artifactId>
	<version>1.9.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<name>mjSIP</name>
	<url>http://www.mjsip.org</url>
	<description>
		A complete java-based implementation of a SIP stack.
		
		SIP (Session Initiation Protocol) is the IETF (Internet Engineering Task Force) signaling standard for managing 
		multimedia session initiation; it is currently defined in RFC 3261. SIP can be used to initiate voice, video and
		multimedia sessions, for both interactive applications (e.g. an IP phone call or a video conference) and not 
		interactive ones (e.g. a Video Streaming), and it is the more promising candidate as call setup signaling for 
		the present day and future IP based telephony services. SIP has been also proposed for session initiation 
		related uses, such as for messaging, gaming, etc.

		The mjSIP stack has been used in research activities by Dept. of Engineering and Architecture at University of 
		Parma and by DIE - University of Roma "Tor Vergata" and several commercial products.
	</description>

	<contributors>
		<contributor>
			<name>Luca Veltri</name>
			<email>luca.veltri@unipr.it</email>
			<organization>University of Parma - Italy</organization>
			<organizationUrl>http://www.unipr.it/</organizationUrl>
		</contributor>
	</contributors>

	<licenses>
		<license>
			<name>GNU General Public License v2.0 only</name>
			<url>https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html</url>
		</license>
	</licenses>

	<modules>
		<module>mjsip-util</module>
		<module>mjsip-net</module>
		<module>mjsip-sound</module>
		<module>mjsip-sip</module>
		<module>mjsip-server</module>
		<module>mjsip-ua</module>
		<module>mjsip-phone</module>
		<module>mjsip-examples</module>
	</modules>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>2.0.7</version>
		</dependency>

		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>slf4j-tinylog</artifactId>
			<version>2.6.1</version>
		    <scope>runtime</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.tinylog</groupId>
		    <artifactId>tinylog-impl</artifactId>
		    <version>2.6.1</version>
		    <scope>runtime</scope>
		</dependency>
	
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter</artifactId>
		    <version>5.10.2</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.mjsip</groupId>
				<artifactId>mjsip-sip</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mjsip</groupId>
				<artifactId>mjsip-server</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mjsip</groupId>
				<artifactId>mjsip-ua</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>

			<resource>
				<directory>..</directory>
				<filtering>false</filtering>
				<includes>
					<include>COPYRIGHT.txt</include>
					<include>LICENSE.txt</include>
				</includes>
				<targetPath>META-INF</targetPath>
			</resource>
		</resources>
		
		<plugins>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-resources-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<fork>true</fork>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-resources-plugin</artifactId>
				    <version>3.3.0</version>
				</plugin>
	
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
